Fri Dec  1 16:30:26 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Minor tweaks in error strings.

Fri Dec 01 12:57:59 GMT 2000 Olly Betts

	* Corrected erroneous documentation comment.

Thu Nov 30 18:50:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* OmSettings no longer throws exceptions internally (at the cost of
	  slightly more code duplication).

Thu Nov 30 18:05:39 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a few std::'s to strings which had been missed.

Thu Nov 30 16:41:11 GMT 2000 Olly Betts

	* OmDocument::Internal now knows its OmDatabase.
 	    
Thu Nov 30 16:40:33 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add context to network errors thrown from OmSocketLineBuf.

Thu Nov 30 16:21:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a quartz test for largish bitmaps.

	* Fixed the code so that the above test would pass.

Thu Nov 30 16:10:37 GMT 2000 Olly Betts

	* OmDocument::add_posting() pretty much done.

Thu Nov 30 15:51:46 GMT 2000 Olly Betts

	* More work on OmDocument::add_posting().

	* Added OmTermListIterator::positionlist_begin() and
	  OmTermListIterator::positionlist_end().

Thu Nov 30 14:16:28 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a prototype bug introduced with the last commit.

Thu Nov 30 13:23:14 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Bcursor::find_key now more const-correct.

	* Bcursor_create now returns an AutoPtr.  The resultant changes
	  fixed a memory leak.
	
	* New exception: OmDatabaseModifiedError.  Thrown when an open
	  revision of a table is no longer valid due to multiple updates.

	* quartzoverwrite1 test re-enabled, and passes.

Thu Nov 30 13:23:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* nettest now uses quartz backend: should always run all tests now
	  (apart from tcpdead1, which doesn't work).
