@@ -130,7 +130,7 @@ test_driver::get_srcdir(const std::string & argv0)
 	} else if (file_exists("netprogs/" + srcfile)) {
 	    chdir("netprogs");
 	} else {
-	    cout << argv0
+	    std::cout << argv0
 		<< ": srcdir not in the environment and I can't guess it!"
 		<< endl;
 	    exit(1);
