@@ -80,8 +80,8 @@ void test_mset_order_equal(const OmMSet &mset1, const OmMSet &mset2);
 /// Check size of mset is as expected
 #define TEST_MSET_SIZE(a, b) TEST_AND_EXPLAIN(((a).items.size() == (b)), \
 	"MSet `"STRINGIZE(a)"' is not of expected size: was `" << \
-	(a).items.size() << "' expected `" << (b) << "': " << endl << \
-	"Full mset was: " << endl << (a))
+	(a).items.size() << "' expected `" << (b) << "':\n" << \
+	"Full mset was:\n" << (a))
 
 /// Check that a piece of code throws an expected exception
 #define TEST_EXCEPTION(a,b) try {b;FAIL_TEST(TESTCASE_LOCN(Expected #a));} \
